# langflow_competition

./: .gitignore  README.md  pyproject.toml
desafio_1/src/langflow_json/: Gerador_transcript_youtube.json  jcnok1.json  submission_3.json
desafio_2/data/: A espinha dorsal da noite.txt  A harmonia de mundos.txt  A persistência da memória.txt  A vida das estrelas.txt  As margens do oceano cósmico.txt  Blues para um planeta vermelho.txt  Céu e inferno.txt  Encyclopaedia Galactica.txt  Histórias de viajantes.txt  Na beira da eternidade.txt  Quem fala em nome da Terra_.txt  Uma voz na fuga cósmica.txt  Viagens no espaço e no tempo.txt  perguntas_teste.csv
desafio_2/results/: link.csv  output.csv  ranking.txt  sub1.csv
desafio_2/src/langflow_json/: Scrapping_Model.json  simple_vector_model.json
desafio_2/src/python/: evaluation_test.py  poc.py  simple_vectorizer_model.py  teste2.py
desafio_3/: Agent - Basic Langflow - Live.json
src/: api.py  app.py  jcnok2.json  submission_1.json  submission_4.json  teste_api.py
